iRedMail-1.2:
    * Supports new distribution release:
        + CentOS 8

    * Dropped distribution release:
        - OpenBSD 6.5. Please use the latest stable release 6.6 instead.

    * Improvements:
        + Fail2ban now works on OpenBSD.
        + Track last login of both POP3/IMAP logins, also when new (last one)
          email was delivered via LMTP/LDA.

    * Fixed issues:
        - Use 'pspell' spell check engine instead of default 'googie' which
          sends data to Roundcube website.
        - Not install package `libclamunrar9` for unpacking rar file on Ubuntu.
        - installer: not correctly update allowed_clients in php-fpm pool
          config file for FreeBSD Jail.
        - Amavisd can not store mail subject with emoji characters.

    * Updated packages:
        + Roundcube webmail -> 1.4.3
        + iRedAPD -> 3.6
        + netdata -> 1.21.0

iRedMail-1.1:
    * Improvements:
        - tools/backup_*.sh: do not rely on Python to calculate dates.

    * Fixed issues:
        - PostgreSQL backend: improper index for table `vmail.sender_relayhost`.
        - LDAP backend: improper filter which causes missing external members
          while querying (not-subscribeable) mailing list with alias domain.
          Thanks to Alyssa Hullinger for the report.
        - Backup MX doesn't work.
        - rsyslog config file `/etc/rsyslog.d/1-iredmail-iredapd.conf` doesn't
          work on CentOS.
        - Installer:
            - Not enable IPv6 in Nginx.
            - Not disable checks for energid in netdata.
              Port 9998 is used by Amavisd and energid (not installed by
              iRedMail) by default, netdata will try to send http request to
              this port, hence it causes error message in Amavisd log file each
              time netdata starts.
            - Not correctly set Nginx log file path in Fail2ban.
            - Not set message size limit in Roundcube ($config['max_message_size']).