@@ -113,6 +113,7 @@ EOF
 *:*:*:${SOGO_DB_USER}:${SOGO_DB_PASSWD}
 *:*:*:${RCM_DB_USER}:${RCM_DB_PASSWD}
 *:*:*:${AMAVISD_DB_USER}:${AMAVISD_DB_PASSWD}
+*:*:*:${FAIL2BAN_DB_USER}:${FAIL2BAN_DB_PASSWD}
 EOF
 
     chown ${SYS_USER_PGSQL}:${SYS_GROUP_PGSQL} ${PGSQL_DOT_PGPASS}
