@@ -1,0 +1,13 @@
+# - Store banned IP in SQL db while it's banned.
+# - Remove banned IP from SQL db while it's unbanned.
+
+[Definition]
+actionstart =
+actioncheck =
+
+actionban   = /usr/local/bin/fail2ban_banned_db ban <ip> <port> <protocol> <name>
+actionunban = /usr/local/bin/fail2ban_banned_db unban <ip>
+
+# Each time Fail2ban is stopped or restarted, `actionstop` will be executed,
+# so the SQL table will be empty each time it stopped or restarted.
+actionstop  = /usr/local/bin/fail2ban_banned_db cleanup <name>
