@@ -1,6 +1,7 @@
 [postfix-pregreet-iredmail]
 enabled     = true
+maxretry    = 1
 filter      = postfix-pregreet.iredmail
 logpath     = PH_MAILLOG
-maxretry    = 1
 action      = PH_FAIL2BAN_ACTION[name=postfix, port="PH_FAIL2BAN_DISABLED_SERVICES", protocol=tcp]
+              banned_db[name=postfix, port="PH_FAIL2BAN_DISABLED_SERVICES", protocol=tcp]
